docs: fix missed change when copying

--- a/docs/examples/google-llms.ipynb
+++ b/docs/examples/google-llms.ipynb
@@ -147,7 +147,7 @@
    "source": [
     "### TimeCopilot Agent\n",
     "\n",
-    "TimeCopilot uses Pydantic to work with llms, so you specify the LLM the same way you'd specify an Agent with Pydantic. Either with a string in the form `'google-gla:model-id'` or instantiating a model with `pydantic_ai.models.google.BedrockConverseModel`. \n",
+    "TimeCopilot uses Pydantic to work with llms, so you specify the LLM the same way you'd specify an Agent with Pydantic. Either with a string in the form `'google-gla:model-id'` or instantiating a model with `pydantic_ai.models.google.GoogleModel`. \n",
     "\n",
     "For more details on how Pydantic works with Google's Generative Language API, see the [Pydantic docs on Google](https://ai.pydantic.dev/models/google/)"
    ]
