--- a/docs/examples/llm-providers.ipynb
+++ b/docs/examples/llm-providers.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "from timecopilot import TimeCopilot"
+    "from timecopilot import TimeCopilot\n"
    ]
   },
   {
@@ -278,7 +278,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tc = TimeCopilot(llm=\"openai:gpt-4o\", retries=3)"
+    "tc = TimeCopilot(\n",
+    "    llm=\"openai:gpt-4o\",\n",
+    "    retries=3\n",
+    ")"
    ]
   },
   {
@@ -364,7 +367,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tc = TimeCopilot(llm=\"ollama:gpt-oss:20b\", retries=3)"
+    "tc = TimeCopilot(\n",
+    "    llm='ollama:gpt-oss:20b',\n",
+    "    retries=3\n",
+    ")"
    ]
   },
   {
@@ -392,7 +398,10 @@
     "    provider=OllamaProvider(base_url=\"http://localhost:11434/v1\"),\n",
     ")\n",
     "\n",
-    "tc = TimeCopilot(llm=llm, retries=3)"
+    "tc = TimeCopilot(\n",
+    "    llm=llm,\n",
+    "    retries=3\n",
+    ")"
    ]
   },
   {
