--- a/docs/examples/ts-foundation-models-comparison-quickstart.ipynb
+++ b/docs/examples/ts-foundation-models-comparison-quickstart.ipynb
@@ -132,7 +132,7 @@
     "    \"https://timecopilot.s3.amazonaws.com/public/data/events_pageviews.csv\",\n",
     "    parse_dates=[\"ds\"],\n",
     ")\n",
-    "df.head()"
+    "df.head()\n"
    ]
   },
   {
@@ -202,13 +202,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "tcf = TimeCopilotForecaster(\n",
     "    models=[\n",
     "        AutoARIMA(),\n",
     "        Chronos(repo_id=\"amazon/chronos-bolt-small\"),\n",
-    "        Moirai(),\n",
-    "        TimesFM(repo_id=\"google/timesfm-2.5-200m-pytorch\", alias=\"TimesFM-2.5\"),\n",
-    "        TimesFM(repo_id=\"google/timesfm-2.0-500m-pytorch\", alias=\"TimesFM-2.0\"),\n",
+    "        Moirai(), \n",
+    "        TimesFM(repo_id=\"google/timesfm-2.5-200m-pytorch\", alias=\"TimesFM-2.5\"), \n",
+    "        TimesFM(repo_id=\"google/timesfm-2.0-500m-pytorch\", alias=\"TimesFM-2.0\"), \n",
     "        SeasonalNaive(),\n",
     "    ]\n",
     ")"
@@ -235,14 +236,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "level = [\n",
-    "    0,\n",
-    "    20,\n",
-    "    40,\n",
-    "    60,\n",
-    "    80,\n",
-    "]  # zero level is strange (it's the median/point forecast), but that comes from the required inputs by TimesFM\n",
-    "cv_df = tcf.cross_validation(df=df, h=12, level=level)"
+    "level = [0, 20, 40, 60, 80] # zero level is strange (it's the median/point forecast), but that comes from the required inputs by TimesFM\n",
+    "cv_df = tcf.cross_validation(df=df, h=12, level=level) "
    ]
   },
   {
@@ -610,14 +605,12 @@
    ],
    "source": [
     "eval_df = evaluate(\n",
-    "    cv_df.drop(columns=[\"cutoff\"]),\n",
-    "    train_df=df.query(\"ds <= '2024-08-31'\"),\n",
+    "    cv_df.drop(columns=[\"cutoff\"]), \n",
+    "    train_df=df.query(\"ds <= '2024-08-31'\"), \n",
     "    metrics=[partial(mase, seasonality=12), scaled_crps],\n",
     "    level=level,\n",
     ")\n",
-    "eval_df.groupby(\"metric\").mean(numeric_only=True).T.sort_values(by=\"scaled_crps\").round(\n",
-    "    3\n",
-    ")"
+    "eval_df.groupby(\"metric\").mean(numeric_only=True).T.sort_values(by=\"scaled_crps\").round(3)"
    ]
   }
  ],
