--- a/docs/examples/anomaly-detection-forecaster-quickstart.ipynb
+++ b/docs/examples/anomaly-detection-forecaster-quickstart.ipynb
@@ -35,7 +35,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "\n",
     "from timecopilot import TimeCopilotForecaster"
    ]
   },
@@ -202,9 +201,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from timecopilot.models.stats import SeasonalNaive, Theta\n",
     "from timecopilot.models.foundation.chronos import Chronos\n",
-    "from timecopilot.models.foundation.flowstate import FlowState\n",
-    "from timecopilot.models.stats import SeasonalNaive, Theta"
+    "from timecopilot.models.foundation.flowstate import FlowState"
    ]
   },
   {
