--- a/docs/examples/cryptocurrency-quickstart.ipynb
+++ b/docs/examples/cryptocurrency-quickstart.ipynb
@@ -16,21 +16,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
     "\n",
     "# Import all the timecopilot goodies\n",
-    "import os\n",
+    "import timecopilot\n",
+    "from timecopilot import TimeCopilotForecaster\n",
+    "from timecopilot.models.stats import SeasonalNaive, Theta\n",
+    "from timecopilot.models.foundation.chronos import Chronos\n",
     "\n",
-    "import kagglehub\n",
-    "import numpy as np\n",
+    "from timecopilot.models.prophet import Prophet\n",
+    "from timecopilot.models.stats import AutoARIMA, AutoETS, SeasonalNaive\n",
+    "from timecopilot.models.foundation.moirai import Moirai\n",
     "\n",
     "# Import basic libraries\n",
     "import pandas as pd\n",
-    "\n",
-    "from timecopilot import TimeCopilotForecaster\n",
-    "from timecopilot.models.foundation.chronos import Chronos\n",
-    "from timecopilot.models.foundation.moirai import Moirai\n",
-    "from timecopilot.models.prophet import Prophet\n",
-    "from timecopilot.models.stats import AutoARIMA, AutoETS, SeasonalNaive, Theta"
+    "import kagglehub\n",
+    "import os\n",
+    "import numpy as np"
    ]
   },
   {
