--- a/docs/examples/forecaster-quickstart.ipynb
+++ b/docs/examples/forecaster-quickstart.ipynb
@@ -24,7 +24,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "\n",
     "from timecopilot import TimeCopilotForecaster"
    ]
   },
@@ -150,9 +149,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from timecopilot.models.foundation.moirai import Moirai\n",
     "from timecopilot.models.prophet import Prophet\n",
-    "from timecopilot.models.stats import AutoARIMA, AutoETS, SeasonalNaive"
+    "from timecopilot.models.stats import AutoARIMA, AutoETS, SeasonalNaive\n",
+    "from timecopilot.models.foundation.moirai import Moirai"
    ]
   },
   {
