--- a/docs/examples/google-llms.ipynb
+++ b/docs/examples/google-llms.ipynb
@@ -38,12 +38,11 @@
    "outputs": [],
    "source": [
     "import nest_asyncio\n",
-    "\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "import pandas as pd\n",
+    "from timecopilot import TimeCopilot\n",
     "\n",
-    "from timecopilot import TimeCopilot"
+    "import pandas as pd"
    ]
   },
   {
@@ -188,6 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pydantic_ai import Agent\n",
     "from pydantic_ai.models.google import GoogleModel\n",
     "from pydantic_ai.providers.google import GoogleProvider\n",
     "\n",
