--- a/docs/examples/sktime.ipynb
+++ b/docs/examples/sktime.ipynb
@@ -26,12 +26,11 @@
    "outputs": [],
    "source": [
     "import nest_asyncio\n",
-    "\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "import pandas as pd\n",
-    "\n",
-    "import timecopilot"
+    "import timecopilot\n",
+    "import sktime as skt\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -54,7 +53,6 @@
    "outputs": [],
    "source": [
     "from sktime.forecasting.trend import TrendForecaster\n",
-    "\n",
     "from timecopilot.models.adapters.sktime import SKTimeAdapter\n",
     "\n",
     "trend_forecaster = TrendForecaster()\n",
