--- a/docs/examples/aws-bedrock.ipynb
+++ b/docs/examples/aws-bedrock.ipynb
@@ -37,12 +37,11 @@
    "outputs": [],
    "source": [
     "import nest_asyncio\n",
-    "\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "import pandas as pd\n",
+    "from timecopilot import TimeCopilot\n",
     "\n",
-    "from timecopilot import TimeCopilot"
+    "import pandas as pd"
    ]
   },
   {
