Apply ruff formatting fixes
Applied ruff-format changes to satisfy pre-commit checks.

No functional changes.

--- a/docs/examples/google-llms.ipynb
+++ b/docs/examples/google-llms.ipynb
@@ -38,6 +38,7 @@
    "outputs": [],
    "source": [
     "import nest_asyncio\n",
+    "\n",
     "nest_asyncio.apply()\n",
     "\n",
     "from timecopilot import TimeCopilot\n",
@@ -168,7 +169,7 @@
    "outputs": [],
    "source": [
     "tc = TimeCopilot(\n",
-    "    llm='google-gla:gemini-3-pro-preview',\n",
+    "    llm=\"google-gla:gemini-3-pro-preview\",\n",
     ")"
    ]
   },
@@ -191,8 +192,8 @@
     "from pydantic_ai.models.google import GoogleModel\n",
     "from pydantic_ai.providers.google import GoogleProvider\n",
     "\n",
-    "provider = GoogleProvider(api_key='your-api-key')\n",
-    "google_model = GoogleModel('gemini-3-pro-preview', provider=provider)\n",
+    "provider = GoogleProvider(api_key=\"your-api-key\")\n",
+    "google_model = GoogleModel(\"gemini-3-pro-preview\", provider=provider)\n",
     "tc = TimeCopilot(\n",
     "    llm=google_model,\n",
     ")"
