--- a/docs/examples/llm-providers.ipynb
+++ b/docs/examples/llm-providers.ipynb
@@ -35,6 +35,7 @@
    "outputs": [],
    "source": [
     "import nest_asyncio\n",
+    "\n",
     "nest_asyncio.apply()"
    ]
   },
@@ -46,7 +47,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from timecopilot import TimeCopilot\n"
+    "from timecopilot import TimeCopilot"
    ]
   },
   {
@@ -276,10 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tc = TimeCopilot(\n",
-    "    llm=\"openai:gpt-4o\",\n",
-    "    retries=3\n",
-    ")"
+    "tc = TimeCopilot(llm=\"openai:gpt-4o\", retries=3)"
    ]
   },
   {
@@ -365,10 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tc = TimeCopilot(\n",
-    "    llm='ollama:gpt-oss:20b',\n",
-    "    retries=3\n",
-    ")"
+    "tc = TimeCopilot(llm=\"ollama:gpt-oss:20b\", retries=3)"
    ]
   },
   {
@@ -396,10 +391,7 @@
     "    provider=OllamaProvider(base_url=\"http://localhost:11434/v1\"),\n",
     ")\n",
     "\n",
-    "tc = TimeCopilot(\n",
-    "    llm=llm,\n",
-    "    retries=3\n",
-    ")"
+    "tc = TimeCopilot(llm=llm, retries=3)"
    ]
   },
   {
