--- a/docs/examples/sktime.ipynb
+++ b/docs/examples/sktime.ipynb
@@ -26,6 +26,7 @@
    "outputs": [],
    "source": [
     "import nest_asyncio\n",
+    "\n",
     "nest_asyncio.apply()\n",
     "\n",
     "import timecopilot\n",
@@ -108,10 +109,7 @@
     "model_list = timecopilot.agent.DEFAULT_MODELS.copy()\n",
     "model_list.append(adapted_model)\n",
     "\n",
-    "tc = timecopilot.TimeCopilot(\n",
-    "    llm=\"openai:gpt-4o\",\n",
-    "    forecasters=model_list\n",
-    ")"
+    "tc = timecopilot.TimeCopilot(llm=\"openai:gpt-4o\", forecasters=model_list)"
    ]
   },
   {
