--- a/docs/examples/forecaster-quickstart.ipynb
+++ b/docs/examples/forecaster-quickstart.ipynb
@@ -131,7 +131,7 @@
     "    \"https://timecopilot.s3.amazonaws.com/public/data/air_passengers.csv\",\n",
     "    parse_dates=[\"ds\"],\n",
     ")\n",
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
@@ -170,13 +170,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "tcf = TimeCopilotForecaster(\n",
     "    models=[\n",
-    "        AutoARIMA(), \n",
-    "        AutoETS(), \n",
-    "        Moirai(), \n",
-    "        Prophet(), \n",
+    "        AutoARIMA(),\n",
+    "        AutoETS(),\n",
+    "        Moirai(),\n",
+    "        Prophet(),\n",
     "        SeasonalNaive(),\n",
     "    ]\n",
     ")"
