docs: fix import in skforecast example

--- a/docs/examples/skforecast.ipynb
+++ b/docs/examples/skforecast.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6e863299",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
     "nest_asyncio.apply()\n",
     "\n",
     "from timecopilot import TimeCopilot\n",
-    "from timecopilot.models.adapters import SKForecastAdapter\n",
+    "from timecopilot.models.adapters.skforecast import SKForecastAdapter\n",
     "\n",
     "\n",
     "from skforecast.recursive import  ForecasterRecursiveMultiSeries\n",
