docs: fix skforecast example and docs

--- a/docs/examples/skforecast.ipynb
+++ b/docs/examples/skforecast.ipynb
@@ -118,9 +118,9 @@
    "id": "4bb01c41",
    "metadata": {},
    "source": [
-    "## Create a TimeCopilot instance with your sktime model\n",
+    "## Create a TimeCopilot instance with your skforecast model\n",
     "\n",
-    "You will need to specify the forecasters you're using when using sktime models. "
+    "You will need to specify the forecasters you're using when using skforecast models. "
    ]
   },
   {
